<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/black_board2" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop"
        android:src="@drawable/down" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#24000000"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/prg_time"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:max="1000" />

        <TextView
            android:id="@+id/txt_current_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Current position 1 / 1"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_question"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/question_1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_answer_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="16dp"
            android:singleLine="true"
            android:text="@string/question_1_answer_1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_answer_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="16dp"
            android:text="@string/question_1_answer_2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_answer_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="16dp"
            android:text="@string/question_1_answer_3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_answer_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="16dp"
            android:text="@string/question_1_answer_4"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>