<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_classroom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/classroom3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#48000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="45sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/grp_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/img_white"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop"
            android:src="@drawable/down" />

        <TextView
            android:id="@+id/txt_introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="128dp"
            android:text="@string/lear_play_explore"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/img_white"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:text="@string/intro_text"
            android:textColor="#777"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_intro"
            android:layout_centerHorizontal="true"
            android:alpha="0"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:padding="16dp"
            android:text="@string/go_learn"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>

>>>>>>> f34dd564e2f2f5ce0253586aecaca9568dd0048f
</RelativeLayout>

