<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/choose_test"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary"/>

    <EditText
        android:id="@+id/edt_student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:inputType="textCapSentences"
        android:textSize="24sp"
        android:hint="@string/hint_student_name"
        android:layout_weight="2"
        android:layout_margin="8dp"/>

    <Spinner
        android:id="@+id/spn_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="2"/>

    <Spinner
        android:id="@+id/spn_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="2"/>

    <Spinner
        android:id="@+id/spn_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="2"/>

    <Spinner
        android:id="@+id/spn_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="2"/>

    <Button
        android:id="@+id/btn_enter_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter"
        android:textSize="24sp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="70dp"
        android:layout_weight="1"/>

</LinearLayout>
